[gd_scene load_steps=49 format=3 uid="uid://bjxhae4lou556"]

[ext_resource type="Script" path="res://scripts/enemies/mob.gd" id="1_kbubx"]
[ext_resource type="Texture2D" uid="uid://bt2cpsxkyg1ig" path="res://sprites/Enemies/Chicken/Hit (32x34).png" id="1_qj5ew"]
[ext_resource type="Script" path="res://scripts/state_label.gd" id="2_buqf3"]
[ext_resource type="Texture2D" uid="uid://b3jaeagyqj0ge" path="res://sprites/Enemies/Chicken/Idle (32x34).png" id="2_pskuk"]
[ext_resource type="Texture2D" uid="uid://caeg8sq8tyuuw" path="res://sprites/Enemies/Chicken/Run (32x34).png" id="3_kr0x6"]
[ext_resource type="Texture2D" uid="uid://cox88sgbq7l5w" path="res://sprites/Dust Particle.png" id="4_efxad"]
[ext_resource type="Script" path="res://scripts/enemies/ground_vision.gd" id="5_b44rj"]
[ext_resource type="Script" path="res://scripts/enemies/mob_wait_state.gd" id="7_6g1hd"]
[ext_resource type="Script" path="res://scripts/enemies/targeted_state_machine.gd" id="8_dw17b"]
[ext_resource type="Script" path="res://scripts/enemies/mob_follow_state.gd" id="8_s2mek"]
[ext_resource type="Script" path="res://scripts/enemies/grounded/grounded_dead_state.gd" id="10_r1hge"]

[sub_resource type="LabelSettings" id="LabelSettings_4ibc3"]
font_size = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j70ip"]
size = Vector2(22, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k34g"]
atlas = ExtResource("1_qj5ew")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5blmt"]
atlas = ExtResource("1_qj5ew")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_pif7c"]
atlas = ExtResource("1_qj5ew")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q43p"]
atlas = ExtResource("1_qj5ew")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0atjl"]
atlas = ExtResource("1_qj5ew")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtsi7"]
atlas = ExtResource("2_pskuk")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu8t1"]
atlas = ExtResource("2_pskuk")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvs0q"]
atlas = ExtResource("2_pskuk")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd33v"]
atlas = ExtResource("2_pskuk")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0kso"]
atlas = ExtResource("2_pskuk")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_omlkn"]
atlas = ExtResource("2_pskuk")
region = Rect2(160, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5rfg"]
atlas = ExtResource("2_pskuk")
region = Rect2(192, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_svpek"]
atlas = ExtResource("2_pskuk")
region = Rect2(224, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3pn3"]
atlas = ExtResource("2_pskuk")
region = Rect2(256, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqcig"]
atlas = ExtResource("2_pskuk")
region = Rect2(288, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic56j"]
atlas = ExtResource("2_pskuk")
region = Rect2(320, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_f48ex"]
atlas = ExtResource("2_pskuk")
region = Rect2(352, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_to4bb"]
atlas = ExtResource("2_pskuk")
region = Rect2(384, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws6vx"]
atlas = ExtResource("3_kr0x6")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_thynw"]
atlas = ExtResource("3_kr0x6")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_w16rk"]
atlas = ExtResource("3_kr0x6")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8cj2"]
atlas = ExtResource("3_kr0x6")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nvd3"]
atlas = ExtResource("3_kr0x6")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxuos"]
atlas = ExtResource("3_kr0x6")
region = Rect2(160, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv5de"]
atlas = ExtResource("3_kr0x6")
region = Rect2(192, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ac8y"]
atlas = ExtResource("3_kr0x6")
region = Rect2(224, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_nax7b"]
atlas = ExtResource("3_kr0x6")
region = Rect2(256, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju5mf"]
atlas = ExtResource("3_kr0x6")
region = Rect2(288, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgvmc"]
atlas = ExtResource("3_kr0x6")
region = Rect2(320, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp78j"]
atlas = ExtResource("3_kr0x6")
region = Rect2(352, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nrgf"]
atlas = ExtResource("3_kr0x6")
region = Rect2(384, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl3r5"]
atlas = ExtResource("3_kr0x6")
region = Rect2(416, 0, 32, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbruh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k34g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5blmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pif7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q43p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0atjl")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtsi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu8t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvs0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd33v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0kso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omlkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5rfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svpek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqcig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic56j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f48ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to4bb")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws6vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thynw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w16rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8cj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nvd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxuos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv5de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ac8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nax7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju5mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgvmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp78j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nrgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl3r5")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="Gradient" id="Gradient_a40i4"]
colors = PackedColorArray(1, 1, 1, 0.588235, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2jab"]
size = Vector2(184, 32)

[node name="Chicken" type="CharacterBody2D" node_paths=PackedStringArray("to_flip") groups=["mob"]]
script = ExtResource("1_kbubx")
to_flip = NodePath("ToFlip")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
unique_name_in_owner = true
visible = false
offset_left = -24.0
offset_top = -26.0
offset_right = 24.0
offset_bottom = -9.0
text = "State"
label_settings = SubResource("LabelSettings_4ibc3")
horizontal_alignment = 1
script = ExtResource("2_buqf3")
state_machine = NodePath("../MobStateMachine")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 3.5)
shape = SubResource("RectangleShape2D_j70ip")

[node name="ToFlip" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Animator" type="AnimatedSprite2D" parent="ToFlip"]
unique_name_in_owner = true
z_index = 5
sprite_frames = SubResource("SpriteFrames_wbruh")
animation = &"idle"
autoplay = "idle"

[node name="DustMoveParticles" type="CPUParticles2D" parent="ToFlip"]
unique_name_in_owner = true
position = Vector2(7, 16)
emitting = false
amount = 3
lifetime = 0.1
speed_scale = 0.3
explosiveness = 1.0
texture = ExtResource("4_efxad")
direction = Vector2(2, -1)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
scale_amount_min = 0.3
scale_amount_max = 0.8
color_ramp = SubResource("Gradient_a40i4")

[node name="PlayerDetector" type="Area2D" parent="ToFlip"]
unique_name_in_owner = true
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToFlip/PlayerDetector"]
position = Vector2(-100, 0)
shape = SubResource("RectangleShape2D_i2jab")

[node name="Vision" type="Node2D" parent="ToFlip"]
unique_name_in_owner = true
script = ExtResource("5_b44rj")

[node name="WallCheck" type="RayCast2D" parent="ToFlip/Vision"]
visible = false
position = Vector2(0, 9)
target_position = Vector2(-16, 0)

[node name="GroundCheck" type="RayCast2D" parent="ToFlip/Vision"]
visible = false
position = Vector2(-13, 9)
target_position = Vector2(0, 10)

[node name="MobStateMachine" type="Node" parent="."]
script = ExtResource("8_dw17b")
starting_state = "wait"
debug = null

[node name="GroundedWaitState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("7_6g1hd")
animated_sprite = NodePath("../../ToFlip/Animator")
animation = &"idle"

[node name="GroundedFollowState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("8_s2mek")
animated_sprite = NodePath("../../ToFlip/Animator")
animation = &"run"

[node name="GroundedDeadState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("10_r1hge")
animated_sprite = NodePath("../../ToFlip/Animator")
animation = &"hit"

[connection signal="body_entered" from="ToFlip/PlayerDetector" to="MobStateMachine" method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="ToFlip/PlayerDetector" to="MobStateMachine" method="_on_player_detector_body_exited"]
